<resources>
    <string name="app_name">OwlPost</string>

    <!--Add Mail Activity-->
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="add_button_text">Add</string>

    <string name="loading_title_add">Adding email…</string>
    <string name="loading_title_attach">Attaching file…</string>
    <string name="loading_title_sending">Sending message…</string>
    <string name="loading_title_request">Sending request…</string>
    <string name="loading_title_response">Sending response…</string>
    <string name="loading_title_decrypt">Decrypting message…</string>

    <string name="empty_fields">Enter all of required data</string>
    <string name="incorrect_email">Email address is incorrect</string>

    <!--Send Mail Activity-->
    <!--Mail Fields Hints-->
    <string name="to_hint">To</string>
    <string name="subject_hint">Subject</string>
    <string name="message_body_hint">Text here…</string>

    <!--Toasts messages-->
    <string name="cant_attach_msg">Couldn\'t attach file</string>
    <string name="sign_on">Digital signature is enabled</string>
    <string name="encryption_on">Encryption is enabled</string>
    <string name="no_recipient">Enter recipient email address</string>
    <string name="recipient_email_error">Recipient\'s email address is incorrect</string>
    <string name="auth_error">Authentication error. Check your credentials</string>
    <string name="internet_connection">No internet connection</string>
    <string name="message_sent">Message sent successful</string>
    <string name="request_sent">Exchange request sent successful</string>
    <string name="response_sent">Exchange response sent successful</string>
    <string name="cannot_reset">Cannot reset all user data</string>
    <string name="import_error">Error has occurred while importing keys</string>
    <string name="import_export_error">Cannot complete operations, cannot access selected file</string>
    <string name="export_success">Keys exported successful</string>
    <string name="import_success">Keys imported successful</string>
    <string name="file_saved_success">File saved successful</string>
    <string name="file_saved_error">Cannot save file</string>

    <!--Exceptions messages-->
    <string name="attachment_size">File exceed total attachments size %1$dMb</string>
    <string name="total_attachments_size">Total attachments size shouldn\'t exceed %1$dMb</string>
    <string name="uri_scheme">Don\'t support current uri scheme %1$s</string>
    <string name="email_already_exists">Entered email already exists</string>
    <string name="active_user_doesnt_exist">Active users doesn\'t exist</string>
    <string name="user_password_not_found">User\'s password not found</string>
    <string name="folders_dont_exist">Folders don\'t exist</string>
    <string name="offset_error">Offset larger than message count</string>
    <string name="read_message_error">Error was occurred while reading messages</string>
    <string name="get_folder_error">Error was occurred while getting folder from server</string>
    <string name="no_selected_mailbox">Mailbox is not selected</string>
    <string name="key_type">Unknown key type %1$d</string>
    <string name="access_key_type">Unknown access key type %1$d</string>
    <string name="key_exist">Key doesn\'t exist</string>

    <!--Main Activity-->
    <!--Drawer Menu Items Names (mailboxes)-->
    <string name="inbox_item">Inbox</string>
    <string name="sent_item">Sent</string>
    <string name="drafts_item">Drafts</string>
    <string name="trash_item">Trash</string>
    <string name="new_email_item">Add Email</string>
    <string name="remove_item">Remove Email</string>
    <string name="settings_item">Settings</string>

    <!--Drawer Menu Items Tags to identity mailbox-->
    <string-array name="mailboxes_real_names">
        <item name="inbox_item">inbox</item>
        <item name="sent_item">sent</item>
        <item name="drafts_item">drafts</item>
        <item name="trash_item">trash</item>
    </string-array>

    <!--Settings Fragment-->

    <string name="export_public_keys">Export public encryption and signature keys</string>
    <string name="export_public_keys_description">
        Export public encryption and signature keys to file.
    </string>

    <string name="export_private_keys">Export private encryption and signature keys</string>
    <string name="export_private_keys_description">
        Export private encryption and signature keys to file.
    </string>

    <string name="import_public_keys">Import public encryption and signature keys</string>
    <string name="import_public_keys_description">
        Import public encryption and signature keys from file to application settings.
    </string>
    <string name="import_public_dialog_info">
        If you already have a public key, after importing a new key you cannot decrypt mails
        from users you shared previous public key with.
        Use in case you have reinstalled an app or changed device.
    </string>

    <string name="import_private_keys">Import private encryption and signature keys</string>
    <string name="import_private_keys_description">
        Import private encryption and signature keys from file to application settings.
    </string>
    <string name="import_private_dialog_info">
        If you already have a private key, after importing a new key you cannot decrypt mails
        from users you shared your public key with.
        Use in case you have reinstalled an app or changed device.
    </string>

    <string name="remove_reset_caption">Remove Email and reset data</string>
    <string name="remove_reset_description">
        Remove Email and reset all data, include local stored mails, encryption and signature keys.
    </string>

    <!--Alert dialog-->
    <string name="dialog_title">Are you sure?</string>
    <string name="reset_dialog_message">
        Reset data will permanently remove mails, encryption and signature keys.
        If you don\'t have exported keys you will can\'t access encrypted mails.
    </string>
    <string name="send_request_dialog_message">
        You have no %1$s keys to encrypt or sign messages. Send exchange request?
        After exchanging you will be able to send and receive encrypted and signed messages with %1$s
    </string>
    <string name="accept_request_dialog_message">
        You have got keys exchange request from %1$s. Do you want to do exchange?
        After exchanging you will be able to send and receive encrypted and signed messages with %1$s
    </string>

    <string name="accept_response_dialog_message">
        You have got keys exchange response from %1$s. Import keys?
    </string>
    <string name="dialog_yes">Confirm</string>
    <string name="dialog_no">Cancel</string>

    <!--Message Fragment-->
    <string name="message_to_prefix">To %1$s</string>
    <string name="no_subject">(No subject)</string>
    <string name="message_encrypt_info">Message protected by OwlPost</string>
    <string name="message_sign_verified">Message verified by OwlPost</string>
    <string name="message_sign_unverified">Message unverified! Seems like message was modified</string>

    <integer-array name="foregroundColors">
        <item>@color/formattingBlack</item>
        <item>@color/formattingRed</item>
        <item>@color/formattingBlue</item>
        <item>@color/formattingGreen</item>
        <item>@color/formattingYellow</item>
        <item>@color/formattingGrey</item>
    </integer-array>

    <integer-array name="backgroundColors">
        <item>@color/formattingWhite</item>
        <item>@color/formattingRed</item>
        <item>@color/formattingBlue</item>
        <item>@color/formattingGreen</item>
        <item>@color/formattingYellow</item>
        <item>@color/formattingGrey</item>
    </integer-array>
</resources>