<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendMail">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar">

        <CheckBox
            android:id="@+id/doEncrypt"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_checkbox"
            android:button="@drawable/ic_key"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/showFormatPanel"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/doEcp"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_checkbox"
            android:button="@drawable/ic_digital_signature"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/doEncrypt"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/showFormatPanel"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_format"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/attach_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_send_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/attach_button"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_attach_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/send_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/toEmails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/to_hint"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/subject_hint"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toEmails"
                android:autofillHints="" />

            <EditText
                android:id="@+id/messageBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/message_body_hint"
                android:inputType="textMultiLine"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject"
                android:autofillHints="" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_line"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bold_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/italic_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/italic_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/underline_btn"
            app:layout_constraintStart_toEndOf="@+id/bold_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/underline_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_underline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/color_btn"
            app:layout_constraintStart_toEndOf="@+id/italic_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/color_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_color_format"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fill_btn"
            app:layout_constraintStart_toEndOf="@+id/underline_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fill_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_format"
            app:layout_constraintStart_toEndOf="@+id/color_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel_format"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_format_clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/close_btn"
            app:layout_constraintStart_toEndOf="@+id/fill_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/close_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_format"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>